--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node server"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.4",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
